# object-storage-playground

crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  error.rs  main.rs
